--- a/template.html
+++ b/template.html
@@ -1,17 +1,180 @@
 <html>
 	<head>
-		
+
+		<link rel='stylesheet' href='css/bootstrap.css'>
+
+		<script src='js/jquery-1.10.2.min.js'></script>
+		<script src='js/bootstrap.js'></script>
+
+
 	</head>
 
 	<body>
-		
+		<div class="container">
+			<div class="topMenu topMenuGradient row">
+				<div class="btn-group  pull-right topMenuContainer">
+					<button class="topMenuBtn btn1 topMenuGradient">Sign In</button>
+					<button class="topMenuBtn btn2 topMenuGradient">Register</button>
+					<button class="topMenuBtn btn3 topMenuGradient">Print Page</button>
+					<button class="topMenuBtn btn4 topMenuGradient">Glossary</button>
+					<button class="topMenuBtn btn5 topMenuGradient ">Text Size: <span class="accessibilitySM">A  </span><span class="accessibilityM"> A  </span><span class="accessibilityL">A </span></button>
+					<button class="topMenuBtn btn6 topMenuGradient dropdown-toggle data-toggle" data-toggle="dropdown">Select you location  <span class="caret"></span></button>
+					<ul class="dropdown-menu topMenuDropDown">
+						<li><a href="#">Toronto</a></li>
+						<li><a href="#">Mississauga</a></li>
+						<li><a href="#">Oakville</a></li>
+					</ul>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="span6 pull-left"><span class="logo">Logo</span></div>
+				<div class="span4 pull-right">
+					<form class="searchMod">
+						<input class="searchInput pull-left" type="text" name="search" value="What are you looking for?">
+			  			<input class="searchButton " type="submit" value="Find It">
+						<div class="searchSettings ">
+			  				Here <input type="radio" name="here" value="male">
+							The Web <input type="radio" name="web" value="female">
+						</div>
+					</form>
+				</div>
+			</div>
+
+			<div class="row mainMenu">
+				<ul class="nav nav-tabs">
+										<li><a href="#" class="topMenuItem">Residential:</a></li>
+					<li><a href="#" class="topMenuItem">TV</a></li>
+					<li><a href="#" class="topMenuItem">Internet</a></li>
+					<li><a href="#" class="topMenuItem">Phone</a></li>
+					<li><a href="#" class="topMenuItem">Pricing</a></li>
+					<li class="active"><a href="#" class="topMenuItem">Music</a></li>
+					<li><a href="#" class="topMenuItem">Order</a></li>
+					<li><a href="#" class="topMenuItem">Billing</a></li>
+					<li><a href="#" class="topMenuItem">Support</a></li>
+					<li class="pull-right"><a href="#" class="topMenuItem">Business</a></li>
+					<li class="pull-right"><a href="#" class="topMenuItem">About US</a></li>
+				</ul>
+			</div>
+
+
+
+
+
+
+
+
+		</div><!--end container -->
 	</body>
 
 	<style>
+		.container { 
+			margin: 0 auto;
+			width: 980px;
+		}
+
+		.topMenu {
+			width: 980px;
+
+			-webkit-border-bottom-right-radius: 7px;
+			-webkit-border-bottom-left-radius: 7px;
+			-moz-border-radius-bottomright: 7px;
+			-moz-border-radius-bottomleft: 7px;
+			border-bottom-right-radius: 7px;
+			border-bottom-left-radius: 7px;
+
+			-webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.75);
+			-moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.75);
+			box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.75);		}
+
+			.topMenu button {
+				color: #abcfff;
+				border: none;
+				border-left: 1px solid #044184;
+				border-left: 1px solid #2963a6;
+				padding-left: 13px;
+				padding-right: 13px;
+			}
+
+			.topMenu button:hover {
+				color: #ffffff;
+				background: #1665b3;
+			}
+
+
+			.topMenuGradient {
+				background: #1161af; /* Old browsers */  /*014594*/
+				background: -moz-linear-gradient(top,  #1161af 0%, #014594 100%); /* FF3.6+ */
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1161af), color-stop(100%,#014594)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top,  #1161af 0%,#014594 100%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top,  #1161af 0%,#014594 100%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top,  #1161af 0%,#014594 100%); /* IE10+ */
+				background: linear-gradient(to bottom,  #1161af 0%,#014594 100%); /* W3C */
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1161af', endColorstr='#014594',GradientType=0 ); /* IE6-9 */
+			}
+			
+			.topMenuContainer { 
+				margin: 0 5px 0 0;
+			}
+
+			.caret {
+				border-top: 6px solid #ffffff;
+				border-right: 6px solid transparent;
+				border-bottom: 0 dotted;
+				border-left: 6px solid transparent;
+			}
+			
+			.accessibilitySM {
+				font-size: 9px;
+				margin-right: 3px;
+			}
+
+			.accessibilityM {
+				font-size: 12px;
+				font-weight: 600;
+				margin-right: 3px;	
+			}
+
+			.accessibilityL {
+				font-size: 14px;
+				margin-right: 3px;
+			}
+
+		.logo {
+			font-size: 40px;
+			color: #064e9d;
+			margin: 50px 0 0 50px;
+		}
+
+
+		.searchMod {
+			margin: 30px 40px 0  0;	
+		}
+
+		.searchInput {
+			-webkit-border-top-left-radius: 10px;
+			-webkit-border-bottom-left-radius: 10px;
+			-moz-border-radius-topleft: 10px;
+			-moz-border-radius-bottomleft: 10px;
+			border-top-left-radius: 10px;
+			border-bottom-left-radius: 10px;
+		}
+
+		.searchButton {
+			-webkit-border-top-right-radius: 10px;
+			-webkit-border-bottom-right-radius: 10px;
+			-moz-border-radius-topright: 10px;
+			-moz-border-radius-bottomright: 10px;
+			border-top-right-radius: 10px;
+			border-bottom-right-radius: 10px;
+		}
+
+
 
 	</style>
 	
 	<script>
+
 
 	</script>
 
