--- a/template.html
+++ b/template.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
 	<head>
 
 		<link rel='stylesheet' href='css/bootstrap.css'>
 		<link rel="stylesheet" href="css/bootstrap-theme.css">
-		<script src="js/jquery.js"></script>
-		<script src="js/jquery.roundabout.js"></script>	
-		<script src='js/bootstrap.js'></script>
+		<script src="js/jquery.js"  type="text/javascript"></script>
+		<script src="js/jquery.roundabout.js"  type="text/javascript"></script>	
+		<script src='js/bootstrap.js'  type="text/javascript"></script>
 		<link rel="stylesheet" href="css/template.css">
 
 	</head>
@@ -46,11 +47,6 @@
 				</div>
 			</div>
 
-	<style>
-
-
-	</style>
-
 			<div class="row mainMenu">
 				<ul class="nav nav-tabs">
 					<li class="mainMenuHeading"><span>Residential:</span></li>
@@ -68,11 +64,6 @@
 					<li class="accentMainMenuItem"><a href="#" class="topMenuItem">About US</a></li>
 				</ul>
 			</div>
-
-			<style>	
-				
-
-			</style>
 
 			<div class="seconLevelMenu row">
 				<ul class="nav nav-pills col-md-6">
@@ -392,7 +383,7 @@
 		</div><!--end container -->
 	</body>
 
-	<script>
+	<script  type="text/javascript">
 	   $(document).ready(function() {
 	      $('.rotatorContainer ul').roundabout({
 	         btnNext: ".nextBtn",
